CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)

FIND_PACKAGE(Aspect REQUIRED HINTS ${ASPECT_DIR} ../ ../../ $ENV{ASPECT_DIR})
DEAL_II_INITIALIZE_CACHED_VARIABLES()

SET(TARGET "plugin")
PROJECT(${TARGET})

ADD_LIBRARY(${TARGET} SHARED melt_transport_adaptive.cc)
ASPECT_SETUP_PLUGIN(${TARGET})

ADD_CUSTOM_COMMAND(
    TARGET ${TARGET} POST_BUILD
    COMMAND ln -sf ${Aspect_DIR}/aspect .)
