CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

FIND_PACKAGE(Aspect REQUIRED HINTS ${ASPECT_DIR} ../ ../../ $ENV{ASPECT_DIR})
DEAL_II_INITIALIZE_CACHED_VARIABLES()

SET(TARGET "newton_tosi_benchmark")
PROJECT(${TARGET})

#ADD_LIBRARY(${TARGET} SHARED tosi.cc tosi_dissipation_statistics.cc)
ADD_LIBRARY(${TARGET} SHARED newton_tosi.cc )
ASPECT_SETUP_PLUGIN(${TARGET})
